commit Friday night

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="61" id="jII-Js-3yv" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" rowHeight="61" id="jII-Js-3yv" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="61"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jII-Js-3yv" id="NDD-ZR-8AD">
@@ -131,7 +131,7 @@
                     <navigationItem key="navigationItem" title="Journal" largeTitleDisplayMode="always" id="xvl-4b-qxb">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="7Yt-V2-Zie">
                             <connections>
-                                <segue destination="Hmb-fC-6ES" kind="presentation" modalPresentationStyle="fullScreen" id="LuL-qz-wHc"/>
+                                <segue destination="Hmb-fC-6ES" kind="presentation" modalPresentationStyle="fullScreen" id="F1g-iq-lS8"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
