--- a/Journal/UI/Base.lproj/Main.storyboard
+++ b/Journal/UI/Base.lproj/Main.storyboard
@@ -121,7 +121,6 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="yl5-Qw-fmZ"/>
                                                 </constraints>
-                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -140,9 +139,21 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ORc-mR-xeQ">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="RZU-ht-KH8"/>
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="xFX-oN-h90"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="RZU-ht-KH8">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="mtn-CV-b1B"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="xFX-oN-h90">
+                            <connections>
+                                <action selector="save:" destination="BYZ-38-t0r" id="tBj-cd-4CV"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextView" destination="HPH-hr-F8T" id="JHg-rf-qCe"/>
+                        <outlet property="titleTextField" destination="WnM-1r-WFc" id="Ule-f4-4TX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
