--- a/Journal/Journal/View/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Base.lproj/Main.storyboard
@@ -159,6 +159,7 @@
                                     <outlet property="dateAndTimeLabel" destination="Nql-Mz-rRu" id="ZB1-tK-iax"/>
                                     <outlet property="excerptLabel" destination="QA4-2z-skI" id="y3N-Z7-BOG"/>
                                     <outlet property="titleLabel" destination="foT-E6-Rk0" id="D5v-Dq-LVP"/>
+                                    <segue destination="ueD-BI-cwL" kind="show" id="iZb-QN-gwB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -196,6 +197,90 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yls-Jl-NpZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="757" y="372"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="yG8-Fz-e7W">
+            <objects>
+                <viewController id="ueD-BI-cwL" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ndx-Bd-Tad">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="0fx-3c-EJd">
+                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="av5-gU-7wk">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="X0R-gx-dMp">
+                                        <rect key="frame" x="0.0" y="37" width="374" height="321.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gnU-yF-zDA">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="59.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pva-pZ-w8j">
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="RSY-WS-Mu0">
+                                                        <rect key="frame" x="0.0" y="28.5" width="374" height="32"/>
+                                                        <segments>
+                                                            <segment title="Happy"/>
+                                                            <segment title="Neutral"/>
+                                                            <segment title="Sad"/>
+                                                        </segments>
+                                                    </segmentedControl>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19q-aV-nXf">
+                                                <rect key="frame" x="0.0" y="67.5" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3d9-xP-uhc">
+                                                <rect key="frame" x="0.0" y="96" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="5yy-Rs-GQJ"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PnM-Ix-0pD">
+                                                <rect key="frame" x="0.0" y="106" width="374" height="215.5"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="U4h-gi-uPF" firstAttribute="trailing" secondItem="0fx-3c-EJd" secondAttribute="trailing" constant="20" id="B59-Vb-oGs"/>
+                            <constraint firstItem="0fx-3c-EJd" firstAttribute="top" secondItem="U4h-gi-uPF" secondAttribute="top" constant="20" id="Dgq-dU-pha"/>
+                            <constraint firstItem="0fx-3c-EJd" firstAttribute="height" secondItem="ndx-Bd-Tad" secondAttribute="height" multiplier="0.4" id="L77-nt-bQo"/>
+                            <constraint firstItem="0fx-3c-EJd" firstAttribute="leading" secondItem="U4h-gi-uPF" secondAttribute="leading" constant="20" id="UEZ-fj-kia"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="U4h-gi-uPF"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="iuY-fs-Qo4"/>
+                    <connections>
+                        <outlet property="journalMoodSelector" destination="RSY-WS-Mu0" id="vKo-tL-bJ9"/>
+                        <outlet property="journalTextView" destination="PnM-Ix-0pD" id="LBg-7t-4ss"/>
+                        <outlet property="journalTitle" destination="av5-gU-7wk" id="tMB-nO-2sE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLL-ud-IQc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="767" y="1030"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BVF-a8-wHn">
