--- a/Journal/UI/Base.lproj/Main.storyboard
+++ b/Journal/UI/Base.lproj/Main.storyboard
@@ -92,15 +92,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Db1-rl-Cql" userLabel="Main Stack">
-                                <rect key="frame" x="20" y="108" width="374" height="269.33333333333331"/>
+                                <rect key="frame" x="20" y="107.99999999999997" width="374" height="315.33333333333326"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WnM-1r-WFc">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="Xc7-rK-qtF">
+                                        <rect key="frame" x="0.0" y="37" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😫"/>
+                                            <segment title="😐"/>
+                                            <segment title="😃"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9eu-qU-ySh" userLabel="Entry Stack">
-                                        <rect key="frame" x="0.0" y="37.000000000000014" width="374" height="232.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="83.000000000000014" width="374" height="232.33333333333337"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aeN-Cx-xYy">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="14.333333333333334"/>
@@ -152,6 +160,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="HPH-hr-F8T" id="JHg-rf-qCe"/>
+                        <outlet property="moodSegmentControl" destination="Xc7-rK-qtF" id="JbO-I9-SYv"/>
                         <outlet property="titleTextField" destination="WnM-1r-WFc" id="Ule-f4-4TX"/>
                     </connections>
                 </viewController>
