--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -79,6 +79,7 @@
                     <connections>
                         <outlet property="MoodControl" destination="Tgs-N0-k8X" id="9Cm-XE-Tuw"/>
                         <outlet property="bodyTextTextField" destination="MBi-mn-SFy" id="wlF-xi-V0y"/>
+                        <outlet property="moodControl" destination="Tgs-N0-k8X" id="ITn-Rb-IGp"/>
                         <outlet property="titleTextField" destination="DuD-Ws-D1K" id="wXt-jX-FIR"/>
                     </connections>
                 </viewController>
@@ -163,26 +164,26 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="mFm-yQ-xZy" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="68"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mFm-yQ-xZy" id="djP-N0-Dv8" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="foX-C7-swH">
-                                            <rect key="frame" x="3" y="3" width="131" height="47.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="foX-C7-swH">
+                                            <rect key="frame" x="10" y="10" width="394" height="48"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="S0B-bT-hkE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="131" height="24"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="24"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hny-od-HGP">
-                                                            <rect key="frame" x="0.0" y="0.0" width="42" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hny-od-HGP">
+                                                            <rect key="frame" x="0.0" y="0.0" width="305" height="24"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="TimeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBb-1z-7Cr">
-                                                            <rect key="frame" x="57" y="0.0" width="74" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" ambiguous="YES" text="TimeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBb-1z-7Cr">
+                                                            <rect key="frame" x="320" y="0.0" width="74" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -190,7 +191,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="BodyText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2N-KE-e7q">
-                                                    <rect key="frame" x="0.0" y="28" width="131" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="28" width="394" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -198,6 +199,12 @@
                                             </subviews>
                                         </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="foX-C7-swH" firstAttribute="leading" secondItem="djP-N0-Dv8" secondAttribute="leading" constant="10" id="EqF-rD-pxN"/>
+                                        <constraint firstAttribute="bottom" secondItem="foX-C7-swH" secondAttribute="bottom" constant="10" id="G4s-cO-MLO"/>
+                                        <constraint firstAttribute="trailing" secondItem="foX-C7-swH" secondAttribute="trailing" constant="10" id="URM-23-T1h"/>
+                                        <constraint firstItem="foX-C7-swH" firstAttribute="top" secondItem="djP-N0-Dv8" secondAttribute="top" constant="10" id="gcl-kn-da2"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="bodyTextLabel" destination="U2N-KE-e7q" id="Q2W-Js-gxW"/>
